WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13145
REGRESSION: Scrollbar not resizing after display none
https://bugs.webkit.org/show_bug.cgi?id=13145
Summary
REGRESSION: Scrollbar not resizing after display none
Kevin M. Dean
Reported
2007-03-21 10:23:28 PDT
When viewing this page, go down to where it says "IF YOU WILL BE ACCOMPANIED BY A GUEST CLICK HERE." Click it and new content appears below and the scrollbar adjusts. Click it again to hide that content and the scrollbar should adjust, but it does not. It leaves a bunch of extra space at the bottom of the page. Upon reviewing the nightlies. It last worked with
r19843
.
r19850
-
r20361
is broken. I couldn't check
r19849
&
r19848
since those releases didn't render pages to the screen.
Attachments
Reduction
(199 bytes, text/html)
2007-03-21 11:08 PDT
,
mitz
no flags
Details
Let the document shrink back
(26.85 KB, patch)
2007-03-21 12:28 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-03-21 11:08:01 PDT
Created
attachment 13740
[details]
Reduction
mitz
Comment 2
2007-03-21 12:28:04 PDT
Created
attachment 13746
[details]
Let the document shrink back Includes layout test and change log. No layout test regressions.
Darin Adler
Comment 3
2007-03-21 13:04:00 PDT
Comment on
attachment 13746
[details]
Let the document shrink back r=me
David Kilzer (:ddkilzer)
Comment 4
2007-03-21 21:31:32 PDT
Committed revision 20380.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug