LayoutTests:

Reviewed by Darin.  Patch by Mitz.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13145
          Regression: Scrollbar not resizing after display none

        * fast/dynamic/view-overflow-expected.checksum: Added.
        * fast/dynamic/view-overflow-expected.png: Added.
        * fast/dynamic/view-overflow-expected.txt: Added.
        * fast/dynamic/view-overflow.html: Added.

WebCore:

        Reviewed by Darin.  Patch by Mitz.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13145
          Regression: Scrollbar not resizing after display none

        Test: fast/dynamic/view-overflow.html

        * rendering/RenderView.cpp:
        (WebCore::RenderView::layout): Reset overflowHeight() and overflowWidth()
        before calling docHeight() and docWidth(), since the former act as a lower
        bound for the latter.



Canonical link: https://commits.webkit.org/17162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20380 268f45cc-cd09-0410-ab3c-d52691b4dbfc